--- a/qualitykiosk/.classpath
+++ b/qualitykiosk/.classpath
@@ -13,5 +13,10 @@
 	<classpathentry kind="lib" path="C:/Program Files/selenium/libs/okio-1.14.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/selenium/client-combined-3.141.59.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/selenium/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/selenium/junit/hamcrest-core-1.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/selenium/junit/hamcrest-core-1.3-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/selenium/junit/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/selenium/junit/junit-4.13-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
